# ChangeLog for schedule

*schedule-5.1:
	Martin Väth <martin at mvath.de>:
	- Set status line/windows title. Introduce corresponding options:
	- --{no-,}status --{no-,}title --text=...
	- schedule-tmux: support man; error out if unknown command is used
	- schedule-tmux: support --{no-,}remain and make --remain the default
	- schedule-tmux is now a POSIX shell script
	- Provide shell helper "schedule quote"

*schedule-5.0:
	Martin Väth <martin at mvath.de>:
	- Provide schedule-tmux script
	- Provide --alpha, --alpha-ignore, --ignore, --immediate
	- schedule: fix race with --bg run/exec
	- schedule-server: fix bugs in permission handling
	- schedule-server: fix race with --bg/--daemon
	- schedule-server: close server's socket also in case of error exit

*schedule-4.2:
	Martin Väth <martin at mvath.de>:
	- Fix manpage handling

*schedule-4.1:
	Martin Väth <martin at mvath.de>:
	- Fix exit status reporting (regression of schedule-4.0)
	- start/queue: print job address and exit status to stdout unless quiet
	- Split job list arguments
	- Slightly reorganize modules
	- zsh-completion: fix --file

*schedule-4.0:
	Martin Väth <martin at mvath.de>:
	- Split into modules to minimize memory footprint

*schedule-3.1:
	Martin Väth <martin at mvath.de>:
	- Protocoll cleanup (\0 separators), making data sanitizing superfluous
	- minor code cleanup
	- man: document HOSTNAME etc
	- man: document --exit and cancel in more detail
	- man: rearrangements and cosmetical improvements

*schedule-3.0:
	Martin Väth <martin at mvath.de>:
	- Support job addresses, job address ranges (also relative ones)
	- list displays now job addresses
	- list handles --quiet differently
	- status does not imply --quiet
	- new commands: address, number

*schedule-2.2:
	Martin Väth <martin at mvath.de>:
	- Support nonpositive numbers in all job ranges; explain consequences

*schedule-2.1:
	Martin Väth <martin at mvath.de>:
	- Fix checks for ranges

*schedule-2.0:
	Martin Väth <martin at mvath.de>: