@@ -1,1 +1,2 @@
 SCHEDULE_OPTS="-Y /etc/schedule.password"
+SCHEDULE_REMAIN="0"
