@@ -13,7 +13,7 @@ use IO::Socket (); # INET or UNIX, depending on user's choice
 
 use Schedule::Helpers qw(is_nonempty);
 
-our $VERSION = '5.1';
+our $VERSION = '5.2';
 
 my @export_funcs = qw(
 	client_globals
